# scola

./: .gitignore  CLAUDE.md
billvot-api/: .gitignore  Gemfile
billvot-api/app/controllers/: application_controller.rb  bill_votes_controller.rb  comments_controller.rb  news_controller.rb  notifications_controller.rb  votes_controller.rb
billvot-api/app/models/: bill_vote.rb  comment.rb  notification.rb  user.rb  vote.rb
billvot-api/config/: application.rb  cable.yml  routes.rb
billvot-api/config/initializers/: cors.rb  devise.rb
billvot-api/db/: schema.rb
billvot-api/db/migrate/: 20250730064734_create_votes.rb  20260202174139_create_bill_votes.rb  20260203065021_create_comments.rb  20260203074722_add_fields_to_votes.rb  20260204092110_create_news.rb  20260204093641_create_notifications.rb
billvot-api/test/controllers/: votes_controller_test.rb
billvot-app/: .gitignore  .prettierignore  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
billvot-app/src/: App.tsx  index.css  main.tsx  svg.d.ts
billvot-crawler/: .env.example  .gitignore  config.py  main.py  pyproject.toml
billvot-crawler/crawlers/: __init__.py  bills.py  news.py
navermap-scraper/: add_place.py  enrich.py  import_to_db.py  migrate_images.py  pyproject.toml  r2.py  refresh_images.py  scraper.py
scola-api/: Dockerfile  Gemfile
scola-api/config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
scola-api/db/: schema.rb
scola-app/: next.config.ts  package.json  pnpm-lock.yaml
scola-app/public/: site.webmanifest
(+345 files in other folders)
