[project]
name = "billvot-crawler"
version = "0.1.0"
description = "Billvot 법안/뉴스 크롤러"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
billvot-crawler = "main:main"
